fix box-sizing issue and add visible error icon when isInvalid is true

--- a/packages/react-components/src/components/TextField/TextField.css
+++ b/packages/react-components/src/components/TextField/TextField.css
@@ -42,6 +42,7 @@
 
 .bcds-react-aria-TextField--Input {
   border: none;
+  flex-grow: 1;
 }
 
 /* Sizes */
